Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-12-16 (SVN):
    * in_sdl.c (IN_ActivateMouse): Nuke events from when mouse was disabled
      by calling SDL_PumpEvents() and SDL_GetRelativeMouseState().
    * Updated the release notes file for v1.5.2.
    * quakedef.h: updated beta date stamp to 2011-12-16.

2011-12-15 (SVN):
    * menu.c (M_ToggleMenu_f): Set key_dest to key_game only if the client
      is connected. Set it to key_console, otherwise. This allows dead keys
      to work properly under fullscreen console mode. Patch from and thanks
      to Sander van Dijk.
      (M_Main_Key): Likewise.
    * keys.c (Key_Event): Now that menu.c sets key_dest properly, remove an
      old hack that used to allow autorepeat in forcedup console.

2011-12-15 (SVN):
    * sys_win.c, sys_dos.c (Sys_ConsoleInput): Removed isDedicated check.
      Host_GetConsoleCommands() already does that as it should.

2011-12-15 (SVN):
    * host_cmd.c (LoadGamestate): Close the file before signalling an error
      (noticed this in recent RMQ sources.)
    * quakedef.h: updated beta date stamp to 2011-12-15.

2011-12-12 (SVN):
    * Removed argument clamping from Sys_Sleep().

2011-12-12 (SVN):
    * Made the cmd argument of CL_SendMove() and CL_WriteDemoCmd() const.
    * Made the cmd argument of MSG_WriteUsercmd() const.
    * Made Sys_ConsoleInput() to return const.
    * quakedef.h: updated beta date stamp to 2011-12-12.

2011-12-10 (SVN):
    * Several minor cleanups.

2011-12-07 (SVN):
    * midi_mac.c (MIDI_Play): Fixed another typo.  Really compiles fine now.
    * midi_mac.c: Added missing brace in the CHECK_MIDI_ALIVE macro, should
      compile fine now.

2011-12-07 (SVN):
    * engine/hexenworld/shared/net_chan.c (Netchan_Setup, Netchan_Process):
      Reverted the chan->incoming_sequence pre-initialization to -1 change
      from Dec. 01 (rev. 4339), because it caused connection failures with