@@ -30,6 +30,8 @@
 #include "quakedef.h"
 
 
+static keydest_t	prev_key_dest;
+
 /* mouse variables */
 static cvar_t	m_filter = {"m_filter", "0", CVAR_NONE};
 
@@ -215,7 +217,7 @@ void IN_Init (void)
 	IN_StartupJoystick ();
 #endif	/* USE_JOYSTICK */
 
-	SDL_EnableUNICODE (1);	/* needed for input in console */
+	SDL_EnableUNICODE (0); /* frame updates will change this as key_dest changes */
 	SDL_EnableKeyRepeat (SDL_DEFAULT_REPEAT_DELAY, SDL_DEFAULT_REPEAT_INTERVAL*2);
 }
 
@@ -242,7 +244,8 @@ void IN_ReInit (void)
 
 	IN_StartupMouse ();
 
-	SDL_EnableUNICODE (1);	/* needed for input in console */
+	SDL_EnableUNICODE (0); /* frame updates will change this as key_dest changes */
+	prev_key_dest = key_game;
 	SDL_EnableKeyRepeat (SDL_DEFAULT_REPEAT_DELAY, SDL_DEFAULT_REPEAT_INTERVAL*2);
 }
 
@@ -464,6 +467,13 @@ void IN_SendKeyEvents (void)
 	SDL_Event event;
 	int sym, state;
 	int modstate;
+
+	if (key_dest != prev_key_dest)
+	{
+		SDL_EnableUNICODE((key_dest == key_console || key_dest == key_message));
+		Key_ClearStates();
+		prev_key_dest = key_dest;
+	}
 
 	while (SDL_PollEvent(&event))
 	{
